--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="./images//VLogo.png" />
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Vishesh Kushwaha | A Full Stack Web Developer.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -42,7 +48,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <!-- <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li> -->
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -56,11 +62,11 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span class="nv1">Vishesh Kushwaha</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <p class="nv1">A Full Stack Web Developer in India</p>
+        <a href="#contact" class="btn btn--pink">Get in touch  ⮞</a>
       </div>
     </div>
   </header>
@@ -79,14 +85,13 @@
           <div class="work__box">
             <div class="work__text">
               <h3>Portfolio Template</h3>
-              <p>
-                A free Open Source Portfolio for anyone to use for free.
+              <p class="p31">
+                Complete Portfolio use by
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
+                <li>CSS</li>
                 <li>JavaScript</li>
-                <li>Parcel</li>
               </ul>
 
               <div class="work__links">
@@ -99,7 +104,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/Port_vish.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -111,17 +116,17 @@
                 eius.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
+                <li>HTML</li>
+                <li>CSS</li>
                 <li>Node</li>
                 <li>MongoDB</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://apple-tvclone.netlify.app/" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a href="https://github.com/codewithritik/tvapple-Clone">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
@@ -163,13 +168,13 @@
     </section>
 
     <!-- ***** Clients ***** -->
-
+<!-- 
     <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
-        <div class="client__logos">
+        <div class="client__logos"> -->
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
+          <!-- <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
           <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
@@ -177,7 +182,7 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ***** About ***** -->
 
@@ -188,18 +193,19 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+             <span style="color: crimson; font-weight: bold; font-size: 20px;">Hii</span> I'm Vishesh Kushwaha here,
+             I was completed many Project kind of Ecomerce and Social Media use by HTML | JavaScript | CSS | NodeJs | ExpressJs etc. So I know well JavaScrip.
+             I like Upgrat my skill and learn somthing new from Projects. 
+
+
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="https://docs.google.com/document/d/1ZKR99nojXsHpzuY0nOoTQJ1_YmR61PeQmKFmWpZWpuQ/edit?usp=sharing" class="btn1">My Resume</a>
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/vishesh_vj.png" alt="" />
           </div>
         </div>
       </div>
@@ -213,15 +219,15 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
+          Are you looking for a <span style="color: crimson;font-weight: 700;">fast-performing</span> and user-friendly website to
           represent your product or business? or looking for any kind of
           consultation? or want to ask questions? or have some advice for me
           or just want to say "Hi 👋" in any case feel free to Let me know. I
           will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          me is via an <span style="color: crimson; font-weight: 700;">email</span> .
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:kvish318@gmail.com" class="btn1">@Email</a>
       </div>
     </div>
   </section>
@@ -233,22 +239,22 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
+          <a href="https://twitter.com/KuahwahaVishesh" title="Link to Twitter Profile">
             <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/vishesh11111" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
+          <a href="https://codepen.io/vishesh11111" title="Link to Codepen Profile">
             <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
+          <a href="https://www.linkedin.com/in/visheshkushwaha/">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
@@ -256,13 +262,13 @@
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+        &copy; 2022 - Template designed & developed by <a href="https://nisar.dev" class="link">Vishesh</a>.
       </p>
       <div class="footer__github-buttons">
-        <iframe
+        <!-- <iframe
           src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
           frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
+        </iframe> -->
       </div>
     </div>
   </footer>
